Closed
Bug 191184
Opened 23 years ago
Closed 23 years ago
Non-ASCII keyboard input incorrect in all widgets
Categories
(MailNews Core :: Internationalization, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.4alpha
People
(Reporter: marina, Assigned: smontagu)
References
Details
(Keywords: intl, regression)
Attachments
(1 file)
|
701 bytes,
patch
|
tetsuroy
:
review+
kinmoz
:
superreview+
dbaron
:
approval1.3b+
|
Details | Diff | Splinter Review |
*** observed with 2003012908 build on WinXP ***
Steps to reproduce:
- opena new Address Card;
- type into First, Last name etc cyrillic chars;
//note: it inputs hex symbols, screen shot to follow
same is true for New Mailing list, New Address Book, New LDAP directory
Keywords: intl,
regression
Summary: Address Book: cyrillic input into new card field's incorrect → Address Book: cyrillic input into all AB widgets is incorrect
Comment 2•23 years ago
|
||
This looks like a duplicate of bug 186798 or the other way around.
it seems that the problem reported in 186798 is about central european chraset.
I'll mark it a dup and change the summary
Summary: Address Book: cyrillic input into all AB widgets is incorrect → Address Book: cyrillic/central european input into all AB widgets is incorrect
*** Bug 186798 has been marked as a duplicate of this bug. ***
Comment 5•23 years ago
|
||
Shouldn't this bug be marked as dup of 186798 as 186798 us older and has more
info about the bug.
Jure, bug # 186798 was entered for the wrong component and assigned to the wrong
people. If there is pertinent info in that bug please put your comments here.
Thanks.
Frank, please look at the bug #188704 that discribes the same problem with
Hebrew text. As Jure mentioned in bug # 186798 it happened as early as in
20011212 build.
Assignee: smontagu → ftang
Summary: Address Book: cyrillic/central european input into all AB widgets is incorrect → Address Book: cyrillic/central european/greek input into all AB widgets is incorrect
Comment 7•23 years ago
|
||
| Assignee | ||
Comment 8•23 years ago
|
||
*** Bug 188704 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 9•23 years ago
|
||
undefining MOZ_UNICODE removes this bug for me (for the Hebrew case at least)
Comment 10•23 years ago
|
||
is this regression from NS7?
| Assignee | ||
Comment 11•23 years ago
|
||
Taking bug
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.4alpha
| Assignee | ||
Comment 13•23 years ago
|
||
| Assignee | ||
Updated•23 years ago
|
Attachment #113261 -
Flags: superreview?(kin)
Attachment #113261 -
Flags: review?(yokoyama)
| Assignee | ||
Comment 14•23 years ago
|
||
*** Bug 191140 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 15•23 years ago
|
||
*** Bug 191186 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 16•23 years ago
|
||
*** Bug 191198 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 17•23 years ago
|
||
*** Bug 191326 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 18•23 years ago
|
||
*** Bug 181290 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 19•23 years ago
|
||
*** Bug 185529 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 20•23 years ago
|
||
This is a bad regression, but the fix may be too high risk to request 1.3
approval for, since it will affect just about every Windows message. Frank, what
do you think?
Status: NEW → ASSIGNED
| Assignee | ||
Comment 21•23 years ago
|
||
*** Bug 189473 has been marked as a duplicate of this bug. ***
Comment 22•23 years ago
|
||
Nominating for 1.3 beta, but anytime before 1.3 final would be good. It would be
a lot of breakage for a milestone release.
Flags: blocking1.3b?
| Assignee | ||
Comment 23•23 years ago
|
||
*** Bug 191007 has been marked as a duplicate of this bug. ***
Comment 24•23 years ago
|
||
Comment on attachment 113261 [details] [diff] [review]
Patch
/r=yokoyama
I was hoping we catch this
kind of bugs sooner.
Thanks, Simon
Attachment #113261 -
Flags: review?(yokoyama) → review+
Comment 25•23 years ago
|
||
Comment on attachment 113261 [details] [diff] [review]
Patch
sr=kin@netscape.com
Has someone done a sweep through all of the source looking for Win32 calls that
have a corresponding nsToolkit::m* version that should be changed over?
Attachment #113261 -
Flags: superreview?(kin) → superreview+
Comment 26•23 years ago
|
||
*** Bug 192012 has been marked as a duplicate of this bug. ***
Comment 27•23 years ago
|
||
I think this probably blocks 1.3beta. Can we get more eyes on the patch,
additional reviews or testing to help minimize risk of landing it so late in beta?
Flags: blocking1.3b? → blocking1.3b+
| Assignee | ||
Comment 28•23 years ago
|
||
Updating summary. The various dupes mention at least Calendar, Address Book,
Mail/News account settings, Mail/News search, Message filters, Bookmark Manager,
and Composer widgets as affected locations; and Cyrillic, Eastern European,
Thai, Armenian and Hebrew as affected languages.
Flags: blocking1.3b+ → blocking1.3b?
Summary: Address Book: cyrillic/central european/greek input into all AB widgets is incorrect → Non-ASCII keyboard input incorrect in all widgets
| Assignee | ||
Comment 29•23 years ago
|
||
Comment on attachment 113261 [details] [diff] [review]
Patch
Requesting approval for 1.3b.
Marina says " I tested all widgets in the mentioned bugs (including dups) and
it looks OK. I read comments # 35 to the bug # 104934 and i don't see any
regressions..."
Although the patch will have quite a wide effect, since it makes all Windows
messages that go through nsAppShell::DispatchNativeEvent() use the
DispatchMessageW API instead of the DispatchMessageA API, I think Marina's
testing is sufficient to be sure that there are no major regressions. The
original MOZ_UNICODE checkin in bug 104394 did the same thing for Windows
messages in more common code paths, and Marina has tested regressions that were
discovered at the time. I think it's unlikely that there will be any completely
new regressions.
Attachment #113261 -
Flags: approval1.3b?
Comment on attachment 113261 [details] [diff] [review]
Patch
a=dbaron for trunk checkin (for 1.3beta). Please get this checked in today so
that we get as much testing as possible.
Attachment #113261 -
Flags: approval1.3b? → approval1.3b+
| Assignee | ||
Comment 31•23 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 32•23 years ago
|
||
on the optimized build this scenario was tested for Hebrew (and other lang that
had a problem:non-Latin-1):
Open a web page with a form.
Open a dialog affected by this bug, e.g. Mail Account Settings, and set focus to
the Your Name text field.
Return to the web page without closing the dialog.
Input is now corrupted in the web page forms.
//result: with the patch the input in the web form was correct
Comment 33•23 years ago
|
||
Seems to be fixed in build 2003020608 on Windows XP Pro.
Comment 34•23 years ago
|
||
*** Bug 192104 has been marked as a duplicate of this bug. ***
Updated•23 years ago
|
Flags: blocking1.3b?
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•