Corruption of Unicode keyboard input in chrome text fields on WinXP and 2000. Bug 191184. r=yokoyama, sr=kin, a=dbaron.